<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="Submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_learner_badge">top learner badge</string>
    <string name="top_learner_name">Top learner name</string>
    <string name="top_learner_hours_and_country">Top learner hours, country</string>
    <string name="textview">TextView</string>
    <string name="learning_hours">" "learning hours ","</string>
    <string name="skill_iq_learner_name">Skill IQ learner name</string>
    <string name="skill_iq_score_country">Skill IQ score , country</string>
    <string name="skill_iq_badge">Skill IQ badge</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="hint_github_link">Project on GITHUB (link)</string>
    <string name="submit_button">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="image_view_cancel">cancel</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">Question mark</string>
    <string name="yes_button">Yes</string>
    <string name="success">success</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="failed">failed</string>
    <string name="not_successful">Submission not Successful</string>
    <string name="splash_screen">Splash screen</string>
</resources>