<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="398dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_top_learner"
                android:layout_width="142dp"
                android:layout_height="109dp"
                android:contentDescription="@string/top_learner_badge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/top_learner" />

            <TextView
                android:id="@+id/textView_top_learner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_learner_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_top_learner"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_top_learner_hours_and_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_learner_hours_and_country"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView_top_learner"
                app:layout_constraintTop_toBottomOf="@+id/textView_top_learner_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    </FrameLayout>