<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="361dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_cancel"
                    android:layout_width="65dp"
                    android:layout_height="76dp"
                    android:contentDescription="@string/image_view_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/btn_dialog" />

                <TextView
                    android:id="@+id/text_view_are_you_sure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.469"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.328" />

                <ImageView
                    android:id="@+id/image_view_question_mark"
                    android:layout_width="72dp"
                    android:layout_height="76dp"
                    android:layout_marginTop="88dp"
                    android:contentDescription="@string/question_mark"
                    app:layout_constraintStart_toEndOf="@+id/text_view_are_you_sure"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_help"
                    app:tint="#000000" />

                <Button
                    android:id="@+id/button_yes"
                    android:layout_width="134dp"
                    android:layout_height="54dp"
                    android:backgroundTint="#00000000"
                    android:radius="8dp"
                    android:text="@string/yes_button"
                    android:textAllCaps="false"
                    android:textColor="@color/darkOrange"
                    android:textSize="25sp"
                    app:color="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_are_you_sure"
                    app:strokeColor="@color/darkOrange"
                    app:strokeWidth="4dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>